# cost_map_proto

./: CMakeLists.txt  package.xml
include/cost_map/: cost_map.hpp  cost_map_loader.hpp  cost_map_match.hpp  cost_map_scan.hpp  cost_map_scan_transform.hpp  occupancy_grid.hpp
include/depth_to_scan/: depth_to_scan.hpp
include/frame_buffer/: scan_frame.hpp  scan_frame_buffer.hpp
include/particle_filter/: particle_filter.hpp
launch/: amcl.launch  docker.launch  mcl.launch  sample.launch
src/: amcl.cpp  cost_map_scan.cpp  depth_buffer_node.cpp  depth_to_scan.cpp  main.cpp  mcl_node.cpp  occupancy_grid.cpp  scan_buffer_node.cpp  scan_frame.cpp  scan_image_gen_node.cpp  test_crop.cpp  test_occupancy_grid.cpp  test_scan_buffer_node.cpp
